# Hackathon_fusion

./: .dockerignore  .gitignore  BACKEND_START_GUIDE.md  DOCKER_BACKEND_SETUP.md  DOCKER_SHARING_GUIDE.md  FRONTEND_REDESIGN_PLAN.md  IMPLEMENTATION_SUMMARY.md  INSTALL.md  INTEGRATION_BRIDGE.md  INTEGRATION_COMPLETE.md  INTEGRATION_SUMMARY.md  LOCAL_DEEPSEEK_SETUP.md  LOCAL_DEEPSEEK_TESTING.md  MANIFEST.in  MONGODB_ARCHITECTURE.md  MONGODB_COMPLETE.md  MONGODB_IMPLEMENTATION.md  MONGODB_SETUP.md  OPENMC_API_SPEC.md  OPENMC_STREAMING_SUMMARY.md  OPENMC_TERMINAL_README.md  PROJECT_ORGANIZATION.md  QUICK_START_LOCAL_DEEPSEEK.md  RAG_CHAT_IMPLEMENTATION.md  RAG_TROUBLESHOOTING.md  README.md  RESULT_DISPLAY_IMPROVEMENTS.md  TERMINAL_STREAMING.md  TEST_RESULTS.md  VISUALIZATION_IMPROVEMENTS.md  VISUALIZATION_PLAN.md  WSL_QUICKSTART.md  check-docker-image-contents.sh  check-ollama-port.sh  demo_adapter_integration.py  diagram.md  docker-compose.yml  download-nuclear-data-openmc-downloader.sh  download-nuclear-data.ps1  download-nuclear-data.sh  (+19 more)
Playground/: FRONTEND_PLAN.md  package.json
RAG/: VOYAGER_RAG_AGENT_PLAN.md
aonp/: __init__.py
docs/: README.md
frontend/: AGENT_THINKING_README.md  Dockerfile  INTEGRATE_RAG_EXAMPLE.tsx  MISSION_CONTROL_MVP_PLAN.md  RAG_FRONTEND_SHOWCASE.md  README.md  TERMINAL_DEMO.md  next.config.ts  package-lock.json  package.json  tsconfig.json
scripts/: diagnose_ollama.py  init_db.py  populate_sample_data.py  run_mongo_tests.py  setup_local_deepseek.bat  setup_local_deepseek.sh  test_db.py  test_local_deepseek.py  test_local_deepseek_integration.py
team2/: .gitignore  README.md
tests/: README.md  __init__.py  test_acceptance.py  test_adapter_e2e.py  test_mongodb.py  (+5 more)
(+228 files in other folders)
